<resources>
    <string name="app_name">brickey</string>
    <string name="set_search_hint">Search for a set</string>
    <string name="search_result_cardview_image_desc">Set image</string>
    <string name="set_number_desc">Set number</string>
    <string name="unknown3">\???</string>
    <string name="set_release_year_desc">Set release year</string>
    <string name="lego">LEGO®</string>
    <string name="set_name_desc">Set name</string>
    <string name="minifig_name_desc">Minifig name</string>
    <string name="set_part_count_desc">Set part count</string>
    <string name="set_part_count_short">%1$d elem.</string>
    <string name="set_part_count_full">0 elements</string>
    <plurals name="set_part_count_full">
        <item quantity="one">1 element</item>
        <item quantity="other">%1$d elements</item>
    </plurals>
    <string name="minifig_part_count_desc">Minifigure part count</string>
    <string name="set_minifig_count">0 minifigs</string>
    <plurals name="set_minifig_count">
        <item quantity="one">1 minifig</item>
        <item quantity="other">%1$d minifigs</item>
    </plurals>
    <string name="set_minifig_count_full">No minifgures!</string>
    <plurals name="set_minifig_count_full">
        <item quantity="zero">No minifgures!</item>
        <item quantity="one">1 minifigure total</item>
        <item quantity="other">%1$d minifigures total</item>
    </plurals>
    <string name="search_for_set_button_desc">Search for a set</string>
    <string name="clear_search_input_button_desc">Clear search input</string>
    <string name="no_search_results">No results found</string>
    <plurals name="search_results_count">
        <item quantity="one">Showing 1 result</item>
        <item quantity="other">Showing %1$d results</item>
    </plurals>
    <string name="return_button">Return button</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="minifigures">Minifigures</string>
    <string name="description">Description</string>
    <string name="rebrickable_url">Rebrickable URL</string>
    <string name="made_with_love_by_himko">made with 💜 by himko</string>
    <string name="coming_soon">Coming Soon...</string>
    <string name="release_year">Release Year:</string>
    <string name="release_year_hint">1999</string>
    <string name="search_term">Search Term</string>
</resources>