<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.search_results.SearchResultsFragment"
    android:background="@color/background_dark"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/navigate_home_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/navigate_back"
            android:backgroundTint="@color/white"
            android:layout_marginStart="10dp"
            android:scaleY="1.5"
            android:scaleX="1.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/search_layout"
            app:layout_constraintBottom_toBottomOf="@+id/search_layout"
            android:contentDescription="@string/return_button"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/search_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_rect_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/navigate_home_button"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/set_search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/search"
                android:layout_marginStart="14dp"
                android:backgroundTint="@color/background_light"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/search_for_set_button_desc" />

            <EditText
                android:id="@+id/search_editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@color/transparent"
                android:hint="@string/set_search_hint"
                android:inputType="textShortMessage|text"
                android:padding="4dp"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/search_cancel_button"
                app:layout_constraintStart_toEndOf="@+id/set_search_button"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/search_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cancel"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/background_light"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/search_editText"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/clear_search_input_button_desc" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/results_info_layout"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="5dp"
            android:background="@color/purple_soft"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_layout" />

        <TextView
            android:id="@+id/search_results_count_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_results_count"
            app:layout_constraintTop_toTopOf="@+id/results_info_layout"
            app:layout_constraintBottom_toBottomOf="@+id/results_info_layout"
            app:layout_constraintStart_toStartOf="@+id/search_layout"
            android:textColor="@color/white"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchResults_recyclerView"
        tools:listitem="@layout/search_result_cardview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingBottom="10dp"
        android:clipToPadding="false"
        android:background="@color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_view" />

</androidx.constraintlayout.widget.ConstraintLayout>
