<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark"
    tools:context=".ui.set_details.SetDetailsFragment">

    <ImageButton
        android:id="@+id/navigate_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/navigate_back"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/return_button"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/set_image_card_container_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/background_light"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="-20dp"
        app:layout_constraintTop_toBottomOf="@+id/navigate_back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/set_image_imageView"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/set_image_imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardCornerRadius="10dp"
        android:backgroundTint="@color/background_light"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintDimensionRatio="4:3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/set_image_card_container_view">

        <ImageView
            android:id="@+id/set_imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/search_result_cardview_image_desc"/>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/content_chipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:checkedChip="@+id/content_chip_description"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/set_image_card_container_view">

        <com.google.android.material.chip.Chip
            android:id="@+id/content_chip_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            app:chipBackgroundColor="@color/chip_background_color_list"
            app:chipStartPadding="20dp"
            app:chipEndPadding="22dp"
            android:textColor="@color/white"
            android:text="@string/description" />

        <com.google.android.material.chip.Chip
            android:id="@+id/content_chip_minifigures"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            app:chipBackgroundColor="@color/chip_background_color_list"
            app:chipStartPadding="20dp"
            app:chipEndPadding="22dp"
            app:chipCornerRadius="14dp"
            android:textColor="@color/white"
            android:text="@string/minifigures" />
    </com.google.android.material.chip.ChipGroup>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"

        android:layout_marginBottom="20dp"
        app:cardCornerRadius="10dp"
        android:backgroundTint="@color/background_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content_chipGroup"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/content_viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>