<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:layout_margin="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/minifig_imageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="4:3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:backgroundTint="@color/background_light"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="-10dp"
            app:layout_constraintTop_toBottomOf="@+id/minifig_imageView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <TextView
                    android:id="@+id/minifig_name_textView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/minifig_name_desc"
                    android:textSize="14sp"
                    android:maxLines="2"
                    android:textStyle="bold"
                    android:ellipsize="end"
                    android:textColor="@color/white"
                    android:paddingBottom="4dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <ImageView
                    android:id="@+id/minifig_piece_count_icon_imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    app:srcCompat="@drawable/hash_number"
                    app:tint="@color/white"
                    android:layout_marginStart="-4dp"
                    android:contentDescription="@string/minifig_part_count_desc"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/minifig_piece_count_textView"
                    app:layout_constraintBottom_toBottomOf="@+id/minifig_piece_count_textView"/>

                <TextView
                    android:id="@+id/minifig_piece_count_textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/set_part_count_full"
                    android:textSize="12dp"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toEndOf="@+id/minifig_piece_count_icon_imageView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/minifig_name_textView"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>